# jrpg-engine

./: .gitignore  CLAUDE_HANDOFF.md  CODEBASE_GUIDE.md  DEV_REPORT.md  FIX_REPORT.md  GEMINI_AUDIO_PROMPT.md  GEMINI_HANDOFF.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  verify_audio_sys.py  verify_codebase.py  verify_data.py
.claude/: settings.local.json
CodeReview/: CRITICAL_FIXES.md  FULL_REVIEW.md  PERFORMANCE_ISSUES.md  README.md
LogBot/: 2025-12-25_change_review.md  2025-12-25_claude_handoff_review.md  2025-12-25_editor_tile_painting_review.md  2025-12-25_gemini_review.md  2025-12-25_ideas.md  2025-12-25_log_animation_system.md  2025-12-25_log_editor.md  2025-12-25_log_editor_utils.md  2025-12-25_log_engine.md  2025-12-25_log_framework.md  2025-12-25_log_game.md  2025-12-25_log_logbot.md  2025-12-25_log_poc.md  2025-12-25_log_ui_system.md  2025-12-25_potential_bugs.md  2025-12-25_project_status.md
QA/: QA_REPORT_1_interaction.md  QA_REPORT_2_movement.md  QA_REPORT_3_collision.md  QA_REPORT_4_ai.md  QA_REPORT_5_battle_system.md  QA_SUMMARY.md
demos/: phase1_demo.py  phase2_demo.py  phase3_demo.py  phase4_demo.py
editor/: __init__.py  app.py  asset_watcher.py  events.py  imgui_backend.py  project.py
editor/panels/: __init__.py  asset_browser.py  base.py  component_inspector.py  entity_hierarchy.py  map_editor.py  properties.py  scene_view.py
editor/widgets/: __init__.py  field_editors.py
engine/: __init__.py
engine/audio/: __init__.py  components.py  manager.py  (+2 more)
framework/: __init__.py
poc/: main.py
tests/: conftest.py
(+130 files in other folders)
